@@ -2,55 +2,62 @@ package org.hhs.cmd;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 
 public class ExecShell {
 
     private Logger logger = LoggerFactory.getLogger("RollingFileErr");
 
-    public  InputStream getInputStream(String cmd){
-        java.lang.Runtime runtime = Runtime.getRuntimeInstance();
-        InputStream in = null;
+    private Object exec(String[] cmdLinux){
         Process process = null;
+        LineNumberReader br = null;
+        StringBuffer sb = null;
         try {
-            process = runtime.exec(new String[] {"/bin/sh", "-c", cmd});
-            in= process.getInputStream();
-            process.destroy();
-            return in;
+            process = java.lang.Runtime.getRuntime().exec(cmdLinux);
+            br = new LineNumberReader(new InputStreamReader(process.getInputStream(), "GB18030"));
         } catch (IOException e) {
-            in = process.getErrorStream();
-            logger.error("exec shell {} error", cmd, e);
-            return in;
-        }finally {
+            logger.error("exec {} error", cmdLinux, e);
             try {
-                in.close();
+                br = new LineNumberReader(new InputStreamReader(process.getErrorStream(), "GB18030"));
+            } catch (UnsupportedEncodingException e1) {
+                e1.printStackTrace();
+            }
+        }finally {
+            sb = new StringBuffer();
+            String line;
+            try {
+                while ((line = br.readLine()) != null){
+                    sb.append(line).append("\n");
+                }
             } catch (IOException e) {
-                logger.error("inputstream close error", e);
+                logger.error("exec cmd error:readLine", e);
             }
         }
+        return sb.toString().replaceAll("%(?![0-9a-fA-F]{2})", "%25");
     }
 
-    private static class Runtime{
-        private static java.lang.Runtime runtime = null;
+    public Object execLinux(String cmd){
+        String[] cmdLinux = {"/bin/sh", "-c", cmd};
+        return exec(cmdLinux);
+    }
 
-        private Runtime(){
+    private ExecShell(){
 
-        }
+    }
 
-        public static java.lang.Runtime getRuntimeInstance(){
-            if (runtime == null){
-                synchronized (Runtime.class){
-                    if (runtime == null){
-                        runtime = java.lang.Runtime.getRuntime();
-                    }
+    private static ExecShell execShell = null;
+
+    public static ExecShell getExecShellInstance(){
+        if (execShell == null){
+            synchronized (ExecShell.class){
+                if (execShell == null){
+                    execShell = new ExecShell();
                 }
             }
-            return runtime;
         }
-
+        return execShell;
     }
 
 }
+
 
